<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Student Companion</string>
    <string name="book">Book</string>
    <string name="vehicle">Vehicle</string>
    <string name="xerox">Xerox</string>
    <string name="pref_key_switch_enable_reminder" translatable="false">SHARED_PREF_IS_REMINDER_ENABLED</string>
    <string name="pref_title_switch_enable_reminder">Daily Reminder</string>
    <string name="pref_summery_on_switch_enable_reminder">Daily Reminder Enabled,\nYou will be notified at given time to fill out your attendance</string>
    <string name="pref_summery_off_switch_enable_reminder">Reminder Disabled\nYou will not be notified to fill out your attendance</string>
    <string name="pref_key_time_reminder_time" translatable="false">SHARED_PREF_REMINDER_TIME</string>
    <string name="pref_title_time_reminder_time">Select Time For Daily Reminder</string>
    <string name="pref_key_switch_enable_auto_attendance" translatable="false">SHARED_PREF_IS_AUTO_ATTENDANCE_ENABLED</string>
    <string name="pref_title_switch_enable_auto_attendance">Enable Auto Attendance</string>
    <string name="pref_summery_on_switch_enable_auto_attendance">Auto Attendance Enabled</string>
    <string name="pref_summery_off_switch_enable_auto_attendance" tools:keep="@string/pref_summery_off_switch_enable_auto_attendance">Auto Attendance Disabled</string>
    <string name="pref_key_switch_enable_night_mode" translatable="false">SHARED_PREF_IS_NIGHT_MODE_ENABLED</string>
    <string name="pref_title_switch_enable_night_mode">Enable Night Mode</string>
    <string name="pref_summery_on_switch_enable_night_mode">Night Mode Enabled</string>
    <string name="pref_summery_off_switch_enable_night_mode">Night Mode Disabled</string>
    <string name="pref_key_switch_enable_smart_silent" translatable="false">SHARED_PREF_IS_SMART_SILENT_ENABLED</string>
    <string name="pref_title_switch_enable_smart_silent">Smart Silent</string>
    <string name="pref_summery_on_switch_enable_smart_silent">Smart Silent Enabled\nDevice will be automatically silent during lectures</string>
    <string name="pref_summery_off_switch_enable_smart_silent">Smart Silent Disabled\nDevice will not be automatically silent during lectures</string>
    <string name="pref_select_places_auto_attendance">Select Places for Auto Attendance</string>
    <string name="pref_key_select_places_auto_attendance" translatable="false">SHARED_PREF_SELECT_AUTO_ATTENDANCE_PLACES</string>
    <string name="pref_summary_select_places_auto_attendance">Select places for each subjects to use auto attendance feature</string>
    <string name="pref_list_notification_title">Notifications</string>
    <string name="pref_key_list_notification" translatable="false">SHRED_PREF_NOTIFICATION</string>
    <string name="pref_summary_list_notification">Configure various Notification Settings such as receiving notifications for new item in shop etc.</string>
    <string name="pref_key_backup_database" translatable="false">SHARED_PREF_BACK_UP_DATABASE</string>
    <string name="pref_title_backup_database">Backup/Restore Database</string>
    <string name="pref_summary_backup_database">Back Up or Restore Database</string>
    <string name="pref_key_developer_tools" translatable="false">SHARED_PREF_DEVELOPER_TOOLS</string>
    <string name="pref_summary_developer_tools">Tools used for development purpose.\\nVery Critical in working of app, DO NOT CHANGE IF YOU DO NOT KNOW WHAT IT DOES</string>
    <string name="pref_title_developer_tools">Developer Tools</string>
    <string name="profile_url_github" translatable="false">https://github.com/PranavVyas</string>
    <string name="profile_url_facebook" translatable="false">https://www.facebook.com/pranav.vyas.330</string>
    <string name="profile_url_twitter" translatable="false">https://twitter.com/PranavVyas99</string>
    <string name="profile_url_instagram" translatable="false">https://www.instagram.com/pro_vyas4399</string>
    <string name="instr_overall_card_title">Overall Attendance Card</string>
    <string name="instr_overall_card_desc">This is Overall AttendanceCard that shows how much percent attendance you have, attendance card is colored by the percent of attendance if it is close to danger it is shown in "Orange" color and if it is near to the safe percent than it is shown in "Green" color. Click on the card to know more!</string>
    <string name="instr_res_digital_lib_title">Digital Library</string>
    <string name="instr_res_digital_lib_desc">Digital Library is the feature for downloading books from online database</string>
    <string name="instr_res_buy_sell_title">Buy/Sell Items</string>
    <string name="instr_res_buy_sell_desc">Buy/Sell Items is the feature for selling items online! The ads can be seen by anyone using the app while opening this section, Ads can be posted by users. Click on the Card to know more</string>
    <string name="instr_res_timetable_title">Time Table</string>
    <string name="instr_res_timetable_desc">Visit the Timetable oby clicking on this menu. You can see 2 types of timetable there, Productive view is not Modern but shows every thing at once and there is of course Modern View!</string>
    <string name="instr_res_holiday_title">Holidays</string>
    <string name="instr_res_holiday_desc">Visit Holidays to know about the Holidays that has been added to the database.</string>
    <string name="instr_market_title">Market Place</string>
    <string name="instr_market_desc">This is the place where you can buy or sell items click on the items to see the details about them. You can call directly to the seller.</string>
    <string name="instr_market_search_title">Search Box</string>
    <string name="instr_market_search_desc">Search for items in the Search Box type "Exact KeyWord" to search for item, If you want all the items of the category, just choose the category and leave the search box empty and clicked on the "Search"</string>
    <string name="instr_market_fab_title">Sell Item</string>
    <string name="instr_market_fab_desc">To sell items click on this button. Fill in the details ,photos etc and post Ad! and have users notified for each new items you post here.</string>
    <string name="instr_atd_card_desc">There is Attendance card! You can use this to see and change attendance.</string>
    <string name="instr_atd_card_title">Attendance Card</string>
    <string name="instr_atd_previous_atd_title">Previous Attendance</string>
    <string name="instr_atd_previous_atd_desc">To See Previous Attendance, touch here and select the date for which you want to change or see Attendance.</string>
    <string name="instr_digital_search_title">Search Box</string>
    <string name="instr_digital_search_desc">Search here for books to download online! No Need to be exact just search anypart of the name to search for it</string>
    <string name="instr_digital_menu_title">Sync</string>
    <string name="instr_digital_menu_desc">Click on "Sync Now" to sync the offline database with the online database</string>
    <string name="instr_notes_title">Notes</string>
    <string name="instr_notes_desc">Click on Notes to open NoteManager, in which you can see the latest notes as well as old notes all well organized
    \n\u25CF You can also Edit old notes and create new notes\n\u25CF TIP: Create Note like Subject CRE 2 and put all important notes in it like bring tutorial book etc…</string>
    <string name="navigation_home">Today\'s attendance</string>
    <string name="navigation_overall_attendance">Overall Attendance/Bunk Planner</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_my_profile">My Profile</string>
    <string name="navigation_about_this_app">About This App</string>
    <string name="navigation_about_developer">About Developer</string>
    <string name="navigation_resources">Resources</string>
    <string name="navigation_sign_out">Sign Out</string>
    <string name="navigation_delete_account">Delete Account</string>
    <string name="title_home">Home</string>
    <string name="title_attention">Attention</string>
    <string name="main_message_delete_acc">\u25CF Deleting account will remove all the attendance data and account from server as well as locally.\n\u25CF Application will shut down after deleting account, You have to manually start again.\n\u25CF Please proceed by touching \"OK\" to continue Or Click On \"Cancel\" to cancel.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="main_neutral_btn_delete_acc_sign_out_instead">Sign out Instead</string>
    <string name="main_sheet_delete_account">Do you want to Delete Account?</string>
    <string name="tut_welcome_title">Welcome!</string>
    <string name="tut_welcome_desc">Hello user, Here are sime features of ths app!</string>
    <string name="tut_att_man_title">Attendance Manager</string>
    <string name="tut_att_man_desc">Simple and easy to use Attendance Manager to track attendance</string>
    <string name="tut_smart_silent_title">Smart Silent</string>
    <string name="tut_smart_silent_desc">Smart Silent is feature that will make your phone silent when you are in the lecture</string>
    <string name="tut_auto_att_title">Auto Attendance (Testing)</string>
    <string name="tut_auto_att_desc">Works on the GPS location, WiFi and cellular signals to mark your present at you selected location</string>
    <string name="tut_resources_title">Resources</string>
    <string name="tut_resources_desc">See Resources Menu from the navigation menu for surprises</string>
    <string name="tut_digital_library_title">Digital Library</string>
    <string name="tut_digital_library_desc">Look for book from digital library section for E-books, Photos etc</string>
    <string name="tut_buy_sell_title">Buy/Sell Items</string>
    <string name="tut_buy_sell_desc">Buy or sell Items like Books, Vehicles(like bikes, bicycles) etc and have users notify when new Items available in store</string>
    <string name="tut_overall_att_title">Overall Attendance</string>
    <string name="tut_overall_att_desc">Know where you are in required attendance criteria and know available lectures for bunk, Bunked lecutres etc..</string>
    <string name="tut_that_s_more_title">There\'s More</string>
    <string name="tut_that_s_more_desc">That\'s not all!! Discover new features by exploring this app!</string>
    <string name="tut_note_title">Notes Manager</string>
    <string name="tut_note_desc">Don\'t worry about forgetting things just write them down in notes and then forget them ;, Check here for all your notes!)</string>
    <string name="tut_get_started">Get Started</string>
    <string name="time_table">Time Table</string>
    <string name="holidays">Holidays</string>
    <string name="market_place">Market Place</string>
    <string name="website_url">https://student-companion-vyas.000webhostapp.com</string>
    <string name="version_info">2.0.0</string>
    <string name="last_update_info">October 2019</string>
    <string name="app_desc">The Student Companion is as the name suggest comes with many features like Attendance Manager which can predict your attendance, Smart Silent, Timetable, Holidays, Auto Attendance, Reminder to fill attendance, Night Mode, etc…</string>
    <string name="terms_and_conditions">Terms and Conditions (Click Here)</string>
    <string name="developer">Pranav Vyas</string>
    <string name="open_source_license">Open Source License (Click Here)</string>
    <string name="privacy_policy">Privacy Policy (Click Here)</string>
    <string name="version_title">Version</string>
    <string name="last_update_title">Last Update</string>
    <string name="developer_title">Developer</string>
    <string name="website_title">Website (maintenance time :3–4 PM)</string>
</resources>