<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textView75"
        style="@style/MyMaterialTextView.MediumTextViewHeadLine6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/boardered_rounded_corner_rectangle"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/title_attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView75">

        <TextView
            android:id="@+id/textView76"
            style="@style/MyMaterialTextView.SmallTextViewBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/main_message_delete_acc" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView77"
        style="@style/MyMaterialTextView.SmallTextViewBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/main_sheet_delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

    <Button
        android:id="@+id/btn_holder_bottom_sheet_delete_ok"
        style="@style/MyCustomMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_holder_bottom_sheet_delete_sign_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView77" />

    <Button
        android:id="@+id/btn_holder_bottom_sheet_delete_sign_out"
        style="@style/MyCustomMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_neutral_btn_delete_acc_sign_out_instead"
        app:layout_constraintEnd_toStartOf="@+id/btn_holder_bottom_sheet_delete_cancel"
        app:layout_constraintStart_toEndOf="@+id/btn_holder_bottom_sheet_delete_ok"
        app:layout_constraintTop_toTopOf="@+id/btn_holder_bottom_sheet_delete_ok" />

    <Button
        android:id="@+id/btn_holder_bottom_sheet_delete_cancel"
        style="@style/MyCustomMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_holder_bottom_sheet_delete_sign_out"
        app:layout_constraintTop_toTopOf="@+id/btn_holder_bottom_sheet_delete_sign_out" />

</androidx.constraintlayout.widget.ConstraintLayout>